# attic

./: .gitignore  README.md
Others/Lowfat/: Makefile.am  README  TODO  configure.ac  start-lowfat.sh
Others/Lowfat/doc/: controls.txt
Others/Lowfat/include/: action.h  application.h  background.h  color.h  component.h  date.h  forward.h  gui_observer.h  image.h  key.h  lfdisplay.h  lffont.h  lfmath.h  lfwindow.h  lowfat.h  photo_observer.h  selection.h  shared_ptr.h  texture.h  vector2.h
Others/Lowfat/pixmaps/: font-mercedes.metrics  font-mercedes.tga
Others/Lowfat/src/: Makefile.am  action.cpp  application.cpp  background.cpp  color.cpp  component.cpp  date.cpp  gui_observer.cpp  image.cpp  lfdisplay.cpp  lffont.cpp  lfwindow.cpp  lowfat.cpp  main.cpp  photo_observer.cpp  selection.cpp  shared_ptr.cpp  texture.cpp  vector2.cpp
Projects/AgUI/src/: CMakeLists.txt  color.cc  color.h  engine.cc  engine.h  gtk.cc  gtk.h  object.cc  object.h  rectangle.cc  rectangle.h  shape.cc  shape.h
Projects/AgUI/src/demo/: CMakeLists.txt  canvas.cc  canvas.h  main.cc
Projects/AgUI/src/docs/: Doxyfile
Projects/Autocal/archive/: CMakeLists.txt  config.h.in
Projects/Autocal/attic/autocal-20100819/: CMakeLists.txt  autocal.pro
Projects/Autocal/attic/autocal-20100819/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Projects/CoreUtils (Haskell)/: Basename.hs  Cat.hs  Echo-1.hs  Echo-2.hs  False.hs  Head.hs  Help.hs  LICENSE  README.md  Uniq.hs  Yes.hs  hscoreutils.cabal
Projects/Graffer/impl-objc-2/: AUTHORS  CMakeLists.txt
Projects/Graffer/impl-objc-2/src/: CMakeLists.txt  main.m
Projects/Graffer/impl-objc-2/src/adt/: CMakeLists.txt  list.h  list.m
Projects/Graffer/impl-objc-2/src/algorithms/: CMakeLists.txt  layout-fr.h  layout-fr.m  layout-simple.h  layout-simple.m  layout.h  layout.m  nodes.h  nodes.m
Projects/Graffer/impl-objc-2/src/graph/: CMakeLists.txt  edge.h  edge.m  graph.h  graph.m  node.h  node.m  point.h  point.m
Projects/Graffer/impl-objc-2/src/ui/: CMakeLists.txt  app.h  app.m  file.h  file.m  general.h  general.m  layout.h  layout.m
Projects/GraphLayoutSandbox/sandbox-branch-timestep/src/: CMakeLists.txt  main.m
Projects/GraphLayoutSandbox/sandbox-branch-timestep/src/adt/: list.h  list.m
Projects/GraphLayoutSandbox/sandbox-branch-timestep/src/algorithms/: layout-fr.h  layout-fr.m  layout-simple.h  layout-simple.m  layout.h  layout.m  nodes.h  nodes.m
Projects/GraphLayoutSandbox/sandbox-branch-timestep/src/graph/: edge.h  edge.m  graph.h  graph.m  node.h  node.m  point.h  point.m
Projects/GraphLayoutSandbox/sandbox-normalization/src/: CMakeLists.txt  main.m
Projects/HSON (Haskell JSON)/: HSON.hs  README.md  hson.cabal
Projects/Metrips/metrips-api/: .env  Cargo.toml  README.md
Projects/Metrips/metrips-api/dot.git/: COMMIT_EDITMSG  REBASE_HEAD  config  index
Projects/Metrips/metrips-api/src/: main.rs  models.rs  schema.rs
Projects/Objective-Gtk/attic/src/: CMakeLists.txt  bin.h  bin.m  box.h  box.m  button.h  button.m  checkbutton.h  checkbutton.m  combobox.h  combobox.m  container.h  container.m  drawingarea.h  drawingarea.m  entry.h  entry.m  gtk.m  hbox.h  hbox.m  hscale.h  hscale.m  hseparator.h  hseparator.m  label.h  label.m  misc.h  misc.m  notebook.h  notebook.m  object.h  object.m  objective-gtk.h  objective-gtk.pc  progress.h  progress.m  progressbar.h  progressbar.m  range.h  range.m  (+18 more)
Projects/OpenCV Mini Projects/Image/lib/: CMakeLists.txt  Image.h  Image.m  Matrix.h  Matrix.m  Point.h
Projects/OpenCV Mini Projects/Image/src/: CMakeLists.txt  Callbacks.h  Callbacks.m  Main.m  UIBuilder.h  UIBuilder.m  cv-stuff.h  cv-stuff.m
Projects/OpenCV Misc Projects/a1/: CMakeLists.txt  README  Report.odt  build.sh  callbacks.c  callbacks.h  cv-stuff.c  cv-stuff.h  main.c  ui-builder.c  ui-builder.h  ui.glade
Projects/OpenCV Misc Projects/a1/archive/: cv-stuff.c  cv-stuff.h
Projects/OpenCV Misc Projects/a1/html/: callbacks.c.html  callbacks.h.html  cv-stuff.c.html  cv-stuff.h.html  main.c.html  ui-builder.c.html  ui-builder.h.html  ui.glade.html  ui.xml.html
Projects/OpenCV Misc Projects/a2/: CMakeLists.txt  Extras.h  Extras.m  Histogram.h  Histogram.m  Image.h  Image.m  Main.m  README  Report.odt  UIBuilder.h  UIBuilder.m  Window.h  Window.m  build.sh  ui.glade  ui.xml
Projects/OpenCV Misc Projects/a3/: CMakeLists.txt  Image.h  Image.m  List.h  List.m  Main.m  Window.m  a3-extra  config.h
Projects/OpenCV Misc Projects/a3/docs/: can_tut.html
Projects/OpenCV Misc Projects/a3/report/: Diagram1.dia  Report.odt
Projects/OpenGrafik/opengrafik/: CMakeLists.txt  clean.sh  run.sh  ui-clean-docs.sh  ui-docs.sh
Projects/OpenGrafik/opengrafik-2/src/: CMakeLists.txt
Projects/OpenGrafik/opengrafik-autotools/: Makefile.am  autogen.sh  configure.ac
Projects/OpenGrafik/opengrafik-autotools/src/: Makefile.am
Projects/OpenGrafik/opengrafik/src/: CMakeLists.txt  main.cc
Projects/PW/: Cargo.toml  LICENSE  README.md
Projects/PW/src/: cmdline.rs  err.rs  file.rs  gen.rs  main.rs
Projects/TVdotcom/: Cargo.toml  Dockerfile
Projects/TVdotcom/frontend/: Makefile  codez.js  index.html
Projects/TVdotcom/src/: main.rs
Snippets/GNU Autotools/C Project Example 1/: Makefile.am  configure.ac  main.c
Snippets/Gtk/C++ Example/: BUGS  configure.ac
Snippets/Gtk/C++ Example/src/: Makefile.am  gsb-panel.cpp  gsb-panel.h  main.cpp
Snippets/Gtk/Gtk Meson Test/: meson.build
Snippets/Gtk/Gtk Meson Test/src/: gtktest-application.c  gtktest-application.h  main.c  meson.build
Snippets/Rust/exifctl/: Cargo.toml
Snippets/Rust/exifctl/schema/: com.fredmorcos.exifctl.gschema.xml
Snippets/Rust/exifctl/src/: main.rs
Snippets/Rust/gtk-rs-more/: Cargo.toml
Snippets/Rust/gtk-rs-more/src/: main.rs
Snippets/Rust/linkedlist-vs-vector/: Cargo.toml
Snippets/Rust/linkedlist-vs-vector/benches/: bench.rs
Snippets/Rust/linkedlist-vs-vector/src/: lib.rs
Snippets/Rust/umacs/: Cargo.toml  rustfmt.toml
Snippets/Rust/umacs/src/: arguments.rs  evaluator.rs  helpers.rs  history.rs  location.rs  logging.rs  main.rs  parser.rs  printer.rs
(+4589 files in other folders)
