[package]
name = "pw"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dirs = "4.0"
zeroize = "1.1"
# derive_more = "0.99"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
