[package]
name = "tvdotcom"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
warp = "0.2"
structopt = "0.3"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros" ] }

[profile.release]
lto = true
# panic = 'abort'
codegen-units = 1
