[package]
name = "tvdotcom"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = "*"
structopt = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures = "*"
sqlx = { version = "*", default-features = false, features = [ "runtime-tokio", "macros" ] }

[profile.release]
lto = true
# panic = 'abort'
codegen-units = 1
