[package]
name = "metrips-api"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
listenfd = "0.3.3"
serde = "1.0.102"
log = "0.4.8"
flexi_logger = "0.14.1"
derive_more = "0.15.0"
diesel = { version = "1.4.3", features = ["postgres", "extras", "numeric"] }
diesel_migrations = "1.4.0"
migrations_macros = "1.4.1"
r2d2 = "0.8.6"
dotenv = "0.15"
