[package]
name = "metrips-api"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
listenfd = "*"
serde = "*"
log = "*"
flexi_logger = "*"
derive_more = "*"
diesel = { version = "*", features = ["postgres", "extras", "numeric"] }
diesel_migrations = "*"
migrations_macros = "*"
r2d2 = "*"
dotenv = "*"
