[package]
name = "exifctl"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.11.0", default-features = false, features = ["async-std", "gtk4"] }
async-channel = "2.3.1"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
