[package]
name = "files"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
description = "File Manager"

[dependencies.glib]
version = "0.6.0"

[dependencies.gdk]
version = "0.9.0"
features = ["embed-lgpl-docs"]

[dependencies.gdk-pixbuf]
version = "0.5.0"
features = ["embed-lgpl-docs"]

[dependencies.gtk]
version = "0.5.0"
features = ["embed-lgpl-docs", "v3_22"]
