[package]
name = "umacs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["display"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
rustyline = { version = "15.0.0", features = ["with-file-history"] }
